SWC-7040 - Bump Java version to 21
Also bump Guice to 6, Mockito to 2, and lock guice-assistedinject to 6 to override Gin.

Migrate many tests to be compatible with Mockito 2. The main reason tests had to change was because `anyString()` and `any(Foo.class)` matchers do not allow `null` as a valid match in v2, but they do in v1. In these cases, just use `any()`